--- a/FinShark/appsettings.json
+++ b/FinShark/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:7070",
+    "Audience": "http://localhost:7070",
+    "SigningKey": "swordfish"
+  }
 }
